# vulkan_interface_lib

./: .gitignore  README.md  README.ru.md
doc/: documentation.txt
include/: base_colors.h  base_includes.h  loader.h  pfn.h  pre.h  renderSetup.h  renderer.h  shader.h  swapchain.h  vertex.h  vk.h
libs/test_math/: header.h  header.inl
src/: createCommandBuffer.c  createCommandPool.c  createDescriptorSetLayout.c  createFramebuffers.c  createGraphicsPipeline.c  createImageViews.c  createInstance.c  createLogicalDevice.c  createRenderPass.c  createShaderModule.c  createSurface.c  createSwapchain.c  createSyncObjects.c  debugUtilsMessenger.c  drawFrame.c  funcLoader.c  getShaderCode.c  lvInitVulkan.c  lvRun.c  lvTerminate.c  pickPhysicalDevice.c  recordCommandBuffer.c  updateUniformBuffer.c  vkGetFuncAddr.c
src/init/: createInstance.c  createLogicalDevice.c  createSurface.c  debugUtilsMessenger.c  pickPhysicalDevice.c
src/other/: createDescriptorPool.c  createDescriptorSets.c  createUniformBuffers.c  updateUniformBuffer.c
src/render_setup/: createGraphicsPipeline.c  createRenderPass.c
src/renderer/: createCommandBuffer.c  createCommandPool.c  createSyncObjects.c  drawFrame.c  recordCommandBuffer.c
src/shaders/: createShaderModule.c  getShaderCode.c
src/swapchain/: createFramebuffers.c  createImageViews.c  createSwapchain.c
src/vertex/: copyBuffer.c  createBuffer.c  createIndexBuffer.c  createVertexBuffer.c  getDescription.c
tests/test1/: CMakeLists.txt  main.c
